--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,14 +3,14 @@
     %h2.Registration
       会員情報の登録
     .SignUpForm
-      = form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f|
+      = form_with model: @user, url: user_registration_path, class: 'new_user', local: true do |f|
         .FormContent
           .Field
             = f.label :ニックネーム
             %span.RequiredItem
               必須
             %br/
-            = f.text_field :nickname, autofocus: true, placeholder: "例)フリマ太郎", class: "Field__InputBox"
+            = f.text_field :nickname, autofocus: true, placeholder: "例)カフェ太郎", class: "Field__InputBox"
             = render "devise/shared/error_messages", model: @user, attribute: :nickname
           .Field
             = f.label :メールアドレス
@@ -24,7 +24,7 @@
             %span.RequiredItem
               必須
             %br/
-            = f.password_field :password, autocomplete: "new-password", placeholder: "7文字以上の半角英数字", class: "Field__InputBox", id: "js-password"
+            = f.password_field :password, autocomplete: "new-password", placeholder: "7文字以上の半角英数字", class: "Field__InputBox"
             %p.FormInfoText
               ※ 英字と数字の両方を含めて設定してください
             = render "devise/shared/error_messages", model: @user, attribute: :password
@@ -33,7 +33,7 @@
             %span.RequiredItem
               必須
             %br/
-            = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "もう一度入力してください", class: "Field__InputBox", id: "js-password_confirmation"
+            = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "もう一度入力してください", class: "Field__InputBox"
           .ShowPassword
             = check_box_tag :passcheck, class: "ShowPassword__CheckBox"
             = f.label :パスワードを表示する, class: "ShowPassword__Text"
